add card stack, fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">exten</string>
+    <string name="app_name">Exteng</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_learn">Learn</string>
     <string name="title_account">Account</string>
