--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <string name="translate">Translate</string>
     <string name="check">Check</string>
     <string name="help">Help</string>
+    <string name="smile">¯\\_(ツ)_/¯</string>
+    <string name="you_already_learn_today">You already learn words today.\nCome tomorrow</string>
 </resources>
