70% of learn screen + some refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="help">Help</string>
     <string name="smile">¯\\_(ツ)_/¯</string>
     <string name="you_already_learn_today">You already learn words today.\nCome tomorrow</string>
+    <string name="wrong_answer">Wrong answer</string>
 </resources>
