--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_learn">Learn</string>
     <string name="title_account">Account</string>
-    <string name="title_settings">Settings</string>
     <string name="login">Log in</string>
     <string name="greeting">Hey! Log in or sign up, please</string>
     <string name="email">E-mail</string>
@@ -11,7 +10,6 @@
     <string name="password">Password</string>
     <string name="create_account">Create account</string>
     <string name="wrong_email_or_password">Wrong email or password</string>
-    <string name="logout">Log out</string>
     <string name="categories">Categories</string>
     <string name="edit_categories">Edit categories</string>
     <string name="basics">Basics</string>
@@ -49,4 +47,17 @@
     <string name="smile">¯\\_(ツ)_/¯</string>
     <string name="you_already_learn_today">You already learn words today.\nCome tomorrow</string>
     <string name="wrong_answer">Wrong answer</string>
+    <string name="save_info">Save information</string>
+
+    <!--SETTINGS FRAGMENT-->
+    <string name="title_settings">Settings</string>
+    <string name="logout">Log out</string>
+    <string name="enable_dark_mode">Enable dark mode</string>
+    <string name="color_theme">Color theme</string>
+    <string name="about">About application</string>
+    <string name="enable_notifications">Enable notifications</string>
+    <string name="config_notifications">Configure notifications</string>
+    <string name="user_settings">User settings</string>
+
+
 </resources>
