--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
 
     <string name="title_activity_main">MainActivity</string>
     <string name="greeting">Hey! Log in or sign up, please</string>
-    <string name="categories">CATEGORIES</string>
+    <string name="categories">Categories</string>
+    <string name="categories_caps">CATEGORIES</string>
     <string name="edit_categories">Edit categories</string>
     <string name="basics">Basics</string>
     <string name="house">House</string>
