login mvp & bug fixes & ui updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="email">E-mail</string>
     <string name="passwords_do_not_match">Passwords do not match</string>
     <string name="confirm_password">Confirm password</string>
+    <string name="choose_categories">Please, choose 5 categories as minimum</string>
 
 
     <!--USER ACTIVITY-->
