add illustrations and swipe icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="check">Check</string>
     <string name="help">Help</string>
     <string name="smile">¯\\_(ツ)_/¯</string>
-    <string name="you_already_learn_today">You already learn words today.\nCome tomorrow</string>
+    <string name="you_already_learn_today">You already learn words today.\nTake a rest and come tomorrow</string>
     <string name="wrong_answer">Wrong answer</string>
     <string name="save_info">Save information</string>
     <string name="account">Account</string>
